--- a/About-Hakkında.html
+++ b/About-Hakkında.html
@@ -38,7 +38,7 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Home-Anasayfa.html" style="padding: 10px 20px;">Home-Anasayfa</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="index.html" style="padding: 10px 20px;">Home-Anasayfa</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="About-Hakkında.html" style="padding: 10px 20px;">About-Hakkında</a>
 </li></ul>
           </div>
@@ -46,7 +46,7 @@
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home-Anasayfa.html" style="padding: 10px 20px;">Home-Anasayfa</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html" style="padding: 10px 20px;">Home-Anasayfa</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About-Hakkında.html" style="padding: 10px 20px;">About-Hakkında</a>
 </li></ul>
               </div>
@@ -90,20 +90,13 @@
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-8a8e"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">
-          <br>2021<br>
-        </p>
-      </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
+      <p class="u-text u-text-4">Contact:&nbsp;<br>
+        <a href="mailto:konuralp.ilim@live.acibadem.edu.tr?subject=Video%20Compressor%20Website" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">Konuralp İlim</a>
+        <br>
+        <a href="mailto:ege.altay@live.acibadem.edu.tr?subject=Video%20Compressor%20Website" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2">Ege Altay</a>
+        <br>Github:<br>
+        <a href="https://github.com/LectureVideoCompressor" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-3">github.com/LectureVideoCompressor</a>
       </p>
-      <a class="u-link" href="https://nicepage.com/" target="_blank">
-        <span>Website Builder Software</span>
-      </a>. 
-    </section>
+    </div></footer>
   </body>
 </html>
