--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </div>
         </nav>
         <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.9.6/dist/ffmpeg.min.js"></script>
-        <p class="u-text u-text-1">Lecture Video Compressor<br>Ders Videosu Küçültücü<br>
+        <p class="u-text u-text-1">Lecture Video Compressor<br>Ders Videosu Küçültücü v0.1<br>
         </p>
       </div></header>
     <section class="u-align-left u-clearfix u-section-1" id="sec-b155">
