--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="u-layout-row">
                       <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-13 u-layout-cell-3">
                         <div class="u-container-layout u-valign-top-xl u-container-layout-5">
-                          <h3 class="u-text u-text-2">Select a File<br>Dosya Seçin<br>
+                          <h3 class="u-text u-text-2" id="message_hq">Select a File<br>Dosya Seçin<br>
                           </h3>
                         </div>
                       </div>
@@ -136,7 +136,7 @@
                     <div class="u-layout-row">
                       <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-13 u-layout-cell-5">
                         <div class="u-container-layout u-valign-top-xl u-container-layout-8">
-                          <h3 class="u-text u-text-3">Select a File<br>Dosya Seçin<br>
+                          <h3 class="u-text u-text-3" id="message_cs">Select a File<br>Dosya Seçin<br>
                           </h3>
                         </div>
                       </div>
