updating js code

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           <br>
           <a href="mailto:ege.altay@live.acibadem.edu.tr?subject=Video%20Compressor%20Website" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2">Ege Altay</a>
           <br>Github:<br>
-          <a href="https://github.com/LectureVideoCompressor" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-3">github.com/LectureVideoCompressor</a>
+          <a href="https://github.com/LectureVideoCompressor/LectureVideoCompressor.github.io" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-3">github.com/LectureVideoCompressor</a>
         </p>
       </div></footer>
     
