--- a/About-Hakkında.html
+++ b/About-Hakkında.html
@@ -76,13 +76,6 @@
             </div>
           </div>
         </div>
-        <p class="u-text u-text-4">Contact:&nbsp;<br>
-          <a href="mailto:konuralp.ilim@live.acibadem.edu.tr?subject=Video%20Compressor%20Website" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">Konuralp İlim</a>
-          <br>
-          <a href="mailto:ege.altay@live.acibadem.edu.tr?subject=Video%20Compressor%20Website" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2">Ege Altay</a>
-          <br>Github:<br>
-          <a href="bbasdbadsds.github.io" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-3">asdads.github.io</a>
-        </p>
         <p class="u-text u-text-5">PowerPoint Command = ffmpeg -i input -crf 28 -r 24 -ac 1 -q:a 0.85 output.mp4</p>
         <p class="u-text u-text-6">Lab Command = ffmpeg -i input -crf 22 -ac 1 -q:a 0.85 output.mp4</p>
       </div>
@@ -95,7 +88,7 @@
         <br>
         <a href="mailto:ege.altay@live.acibadem.edu.tr?subject=Video%20Compressor%20Website" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2">Ege Altay</a>
         <br>Github:<br>
-        <a href="https://github.com/LectureVideoCompressor" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-3">github.com/LectureVideoCompressor</a>
+        <a href="https://github.com/LectureVideoCompressor/LectureVideoCompressor.github.io" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-3">github.com/LectureVideoCompressor</a>
       </p>
     </div></footer>
   </body>
